2012-06-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added inventory server statistics.

2012-06-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_xml_stress.conf
	 util/pandora_xml_stress.pl: Changed XML character codification 
	of Pandora XML stress to UTF-8.
	
	Merged from trunk.
	
2012-06-21  Kikuchi Koichiro <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Small fixes: removed duplicated useradd
	 line, don't remove pandora user after uninstall, added collections
	 directory.

2012-06-21  Sancho Lerena <slerena@artica.es>

        * lib/PandoraFMS/NetworkServer.pm: SNMP values starting with quotes
        are now stripped of starting/ending double quotes. This will help to
        get numeric (float data) as strings.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

        * lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
        queries.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed an error with group_statistics agent
	queries.

2012-06-12  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added export server stats.

2012-06-12 Miguel de Dios  <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/ReconServer.pm: fixed the recode into html entities
	the name of network component into the function
	"create_network_profile_modules".

2012-06-11 Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_server/util/pandora_xml_stress.pl: cleaned source code
	style.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed an error counting 
	unknown agents in groups.

2012-05-31  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Hide wmic error messages and improved
	  error checking.

2012-05-30  Sancho Lerena <slerena@artica.es>
	
	* lib/PandoraFMS/Core.pm: Fixed description/comment for a function.

	* lib/PandoraFMS/Core.pm: Updated batch statistic queries to get