@@ -1,3 +1,13 @@
+2012-06-22  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/DB.pm,
+	  lib/PandoraFMS/Core.pm,
+	  lib/PandoraFMS/ReconServer.pm: Reverted some improvements that seem
+	  to have been accidentally removed.
+
+	* lib/PandoraFMS/Tools.pm: Use the ping command's count parameter
+	  instead of a loop for icmp_checks. Slower but more reliable.
+
 2012-06-21  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Added inventory server statistics.
